Fix syntax error in CSS for text alignment

--- a/style.css
+++ b/style.css
@@ -76,8 +76,8 @@ footer {
 .step-with-image h3 {
   margin-bottom: 0.5em;
   color: #333;
-  font-weight: bold;
-  text-align: center;
+  font-weight: bold
+  text-align: center;;
 }
 
 /* images with borders + shadows */
